--- a/package.json
+++ b/package.json
@@ -2,9 +2,11 @@
   "name": "weather-forecast-app",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://willamesoares.github.io/weather-forecast-app",
   "dependencies": {
     "classnames": "^2.2.6",
     "es6-promise": "^4.2.4",
+    "gh-pages": "^1.2.0",
     "isomorphic-fetch": "^2.2.1",
     "node-sass-chokidar": "^1.3.0",
     "npm-run-all": "^4.1.3",
@@ -14,6 +16,8 @@
     "react-scripts": "1.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -b master -d build",
     "build-css": "node-sass-chokidar src/ -o src/",
     "watch-css": "npm run build-css && node-sass-chokidar src/ -o src/ --watch --recursive",
     "start-js": "react-scripts start",
